fixed layout when code block overflowed editor output

--- a/components/mdx/code/code.module.scss
+++ b/components/mdx/code/code.module.scss
@@ -5,5 +5,6 @@
 
 .inline {
 	color: red;
-	font-weight: 600;
+	font-weight: 500;
+	font-size: 1rem;
 }
