--- a/components/shared/Editor/Editor.module.scss
+++ b/components/shared/Editor/Editor.module.scss
@@ -20,6 +20,7 @@
 	grid-area: editor;
 	overflow: auto;
 	resize: horizontal;
+	touch-action: pan-x;
 	min-width: 20vw;
 	max-width: 100vw;
 	border-right: 2px solid $surface;
