--- a/components/shared/Editor/MDXOutput/MDXOutput.module.scss
+++ b/components/shared/Editor/MDXOutput/MDXOutput.module.scss
@@ -10,6 +10,7 @@
 	overflow-y: auto;
 	width: 100%;
 	height: 100%;
+	max-width: 100%;
 }
 
 .note {
@@ -19,7 +20,6 @@
 	padding: 1rem;
 	margin: 0 auto;
 	max-width: 1000px;
-	width: fit-content;
 }
 
 .title {
@@ -31,7 +31,4 @@
 	display: flex;
 	gap: 10px;
 	align-items: center;
-}
-
-.content {
 }
